--- a/src/App.css
+++ b/src/App.css
@@ -38,9 +38,18 @@ body {
   /* border-color: #FF6B6B; Изменение цвета границы кнопки на красный */
 }
 
+.pad {
+  position:relative;
+  top: 100px;
+}
 body {
-  padding: 0;
-  margin: 0;
-  padding-top: 40px;
+  background-color: #7362CA;
 }
 
+.table{
+  width: 2000px;
+  height: 900px;
+}
+.card {
+  margin-bottom: 10px;
+}
