--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,12 @@ body {
   align-items: center !important
 }
 
+.text2{
+  color: white !important;
+  font-size: 22px;
+  align-items: center !important
+}
+
 .textBig{
   color: white;
   font-size: 50px;
